# switch-sd-mgr

./: .gitignore  Build.bat  README.md  build.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
configs/: hosts_config.json  switch_configs.json  web_config.json
scripts/: Check-Env.ps1  Clear-Cache.ps1  Run-Tests.ps1  Sync-Dependencies.ps1  build.ps1  build.sh  publish.ps1  set-version.ps1  test.ps1
src/: App.css  App.tsx  app-types.ts  source-utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: blacklist.rs  configs.rs  firmware.rs  homebrew.rs  mod.rs  paths.rs  sources.rs  ssh.rs  ui.rs  updates.rs  utilities.rs  workspace.rs
src-tauri/src/core/: archive.rs  config.rs  ini_parser.rs  manifest.rs  metadata.rs  mod.rs  nro_scanner.rs  payload.rs  ssh.rs  storage.rs  tinfoil.rs  utils.rs
src-tauri/src/core/downloader/: mod.rs  models.rs
src/components/: RawConfigDiffModal.tsx  RawSourcesModal.tsx  SourceEditorModal.tsx  StarterSourcesModal.tsx  StructuredConfigPreviewModal.tsx  WalkthroughModal.tsx  ui.tsx
src/hooks/: useConfigs.ts  useSources.ts  useSsh.ts  useUiSettings.ts  useUpdates.ts  useWorkspace.ts
src/utils/: diff.ts
src/views/: AppsView.tsx  ConfigView.tsx  DashboardView.tsx  FirmwareView.tsx  HelpView.tsx  LogsView.tsx  RemoteView.tsx  SettingsView.tsx  SourcesView.tsx  UpdatesView.tsx  UtilitiesView.tsx
