[package]
name = "switch-sd-mgr"
version = "7.0.0"
description = "Switch SD Updater"
authors = ["Roy Dawson IV"]
edition = "2024"

[lib]
name = "switch_sd_mgr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "stream", "native-tls"] }
scraper = "0.26.0"
clap = { version = "4.6.0", features = ["derive"] }
zip = "8.4.0"
sha2 = "0.11.0"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures-util = "0.3.32"
walkdir = "2.5.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
hex = "0.4.3"
urlencoding = "2.1.3"
wildmatch = "2.6.1"
url = "2.5.8"
tauri-plugin-dialog = "2.6.0"
md5 = "0.7.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[target.'cfg(target_os = "macos")'.dependencies]
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ssh2 = { version = "0.9.5" }

